--- a/app/templates/eventFrames/select.html
+++ b/app/templates/eventFrames/select.html
@@ -198,9 +198,9 @@
                             {% if childrenClass == "EventFrame" %}
                                 <td><a class = "btn btn-default" title = "Select" href = '{{ url_for("eventFrames.dashboard",
                                     eventFrameId = child.EventFrameId) }}'><span class = "glyphicon glyphicon-list"></span></a></td>
-                                <td><a class = "btn btn-default" title = "Grafana"
-                                    href = '{{ "EventFramesGraph" | grafanaUrl({"eventFrameId": child.EventFrameId}) }}'
-                                    target = "_blank"><span class = "glyphicon glyphicon-stats"></span></a></td>
+                                <td><a class = "btn btn-default" title = "Dash"
+                                    href = '{{ url_for("dashes.eventFrameGraph", eventFrameId = child.EventFrameId) }}'>
+                                    <span class = "glyphicon glyphicon-stats"></span></a></td>
                                 <td><a class = "btn btn-default" title = "Send Message"
                                     href = '{{ url_for("messages.addMessage", eventFrameId = child.EventFrameId) }}'>
                                     <span class = "glyphicon glyphicon-envelope"></span></a></td>
@@ -302,7 +302,7 @@
                 eventFrameTemplateId = parent.EventFrameTemplateId) }}' role = "button"><span class = "glyphicon glyphicon-plus"></span></a>
             <a class = "btn btn-default" title = "Add Event Frame Attribute Lookup Template"
                 href = '{{ url_for("eventFrameAttributeTemplates.addEventFrameAttributeTemplate",
-                eventFrameTemplateId = parent.EventFrameTemplateId, lookup = True) }}' role = "button"><span class = "glyphicon glyphicon-plus">                    
+                eventFrameTemplateId = parent.EventFrameTemplateId, lookup = True) }}' role = "button"><span class = "glyphicon glyphicon-plus">
                 </span> Lookup</a>
             <br><br>
             <table id = "eventFrameAttributeTemplatesTable" class = "table table-hover" style = "display:none">
@@ -324,7 +324,7 @@
                         <td>{{ eventFrameAttributeTemplate.Name }}</td>
                         <td>{{ eventFrameAttributeTemplate.Description }}</td>
                         <td>{{ "" if eventFrameAttributeTemplate.LookupId is none else eventFrameAttributeTemplate.Lookup.Name }}</td>
-                        <td>{{ "" if eventFrameAttributeTemplate.UnitOfMeasurementId is none else eventFrameAttributeTemplate.UnitOfMeasurement.Abbreviation }}                            
+                        <td>{{ "" if eventFrameAttributeTemplate.UnitOfMeasurementId is none else eventFrameAttributeTemplate.UnitOfMeasurement.Abbreviation }}
                             </td>
                         {% if eventFrameAttributeTemplate.Lookup is none %}
                             <td>{{ "" if eventFrameAttributeTemplate.DefaultStartValue is none else eventFrameAttributeTemplate.DefaultStartValue }}</td>
