--- a/app/templates/dashes/eventFrameGraph/eventFrameGraph.html
+++ b/app/templates/dashes/eventFrameGraph/eventFrameGraph.html
@@ -29,6 +29,9 @@
             </ol>
         </div>
     {% endif %}
+    <div class = "page-header">
+        <h1>Event Frame Graph <small></small></h1>
+    </div>
     <div class = "embed-responsive embed-responsive-4by3">
         <iframe id = "iframe" class = "embed-responsive-item"></iframe>
     </div>
