--- a/app/templates/elements/select.html
+++ b/app/templates/elements/select.html
@@ -133,8 +133,8 @@
                             {% if childrenClass == "Element" %}
                                 <td><a class = "btn btn-default" title = "Select" href = '{{ url_for("elements.dashboard",
                                     elementId = child.ElementId) }}'><span class = "glyphicon glyphicon-list"></span></a></td>
-                                <td><a class = "btn btn-default" title = "Grafana"
-                                    href = '{{ "ElementValuesGraph" | grafanaUrl({"elementId": child.ElementId}) }}' target = "_blank">
+                                <td><a class = "btn btn-default" title = "Dash"
+                                    href = '{{ url_for("dashes.elementValuesGraph", elementId = child.ElementId) }}'>
                                     <span class = "glyphicon glyphicon-stats"></span></a></td>
                             {% elif childrenClass == "ElementAttributeTemplate" %}
                                 <td></td>
@@ -263,7 +263,7 @@
                 "columns":
                 [
                     { "orderable": false }, // Details button.
-                    { "orderable": false }, // Grafana button.
+                    { "orderable": false }, // Dash button.
                     null,
                     null,
                     {% if childrenClass == "Element" %}
