--- a/app/templates/tags/select.html
+++ b/app/templates/tags/select.html
@@ -160,7 +160,7 @@
                 "columns":
                 [
                     { "orderable": false }, // Tag values button.
-                    { "orderable": false }, // Grafana button.
+                    { "orderable": false }, // Dash button.
                     null,
                     null,
                     {% if childrenClass == "Tag" %}
