Element Summary renamed to Elements Summary.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -58,7 +58,7 @@
                     <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Dashes <span class = "caret"></span></a>
                         <ul class = "dropdown-menu">
                             <li><a href = '{{ url_for("dashes.activeEventFramesSummary") }}'>Active Event Frames Summary</a></li>
-                            <li><a href = '{{ url_for("dashes.elementSummary") }}'>Element Summary</a></li>
+                            <li><a href = '{{ url_for("dashes.elementsSummary") }}'>Elements Summary</a></li>
                             <li><a href = '{{ url_for("dashes.elementValuesGraph") }}'>Element Values Graph</a></li>
                             <li><a href = '{{ url_for("dashes.eventFrameGroupSummary") }}'>Event Frame Group Summary</a></li>
                             <li><a href = '{{ url_for("dashes.eventFrameGraph") }}'>Event Frame Graph</a></li>
