--- a/app/templates/dashes/elementsSummary/elementsSummary.html
+++ b/app/templates/dashes/elementsSummary/elementsSummary.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Element Summary{% endblock %}
+{% block title %}Elements Summary{% endblock %}
 
 {% block page_content %}
     {% if site is not none or elementTemplate is not none %}
@@ -11,13 +11,13 @@
                     <li><a href = '{{ url_for("elements.selectElement", selectedClass = "Enterprise",
                         selectedId = site.Enterprise.id()) }}'>{{ site.Enterprise.Name }}</a></li>
                     <li>
-                        <a title = "Previous" href = '{{ url_for("dashes.elementSummary", siteId = site.previous().id()) }}'>
+                        <a title = "Previous" href = '{{ url_for("dashes.elementsSummary", siteId = site.previous().id()) }}'>
                             <span class = "glyphicon glyphicon-arrow-left"></span></a>
-                        <a title = "Next" href = '{{ url_for("dashes.elementSummary", siteId = site.next().id()) }}'>
+                        <a title = "Next" href = '{{ url_for("dashes.elementsSummary", siteId = site.next().id()) }}'>
                             <span class = "glyphicon glyphicon-arrow-right"></span></a>
                         <a href = '{{ url_for("elements.selectElement", selectedClass = "Site", selectedId = site.id()) }}'>{{ site.Name }}</a>
                     </li>
-                    <li class = "active">Element Summary</li>
+                    <li class = "active">Elements Summary</li>
                 {% elif elementTemplate is not none %}
                     <li><a href = '{{ url_for("elements.selectElement", selectedClass = "Root") }}'><span class = "glyphicon glyphicon-home"></span></a></li>
                     <li><a href = '{{ url_for("elements.selectElement", selectedClass = "Enterprise",
@@ -25,20 +25,20 @@
                     <li><a href = '{{ url_for("elements.selectElement", selectedClass = "Site",
                         selectedId = elementTemplate.Site.id()) }}'>{{ elementTemplate.Site.Name }}</a></li>
                     <li>
-                        <a title = "Previous" href = '{{ url_for("dashes.elementSummary", elementTemplateId = elementTemplate.previous().id()) }}'>
+                        <a title = "Previous" href = '{{ url_for("dashes.elementsSummary", elementTemplateId = elementTemplate.previous().id()) }}'>
                             <span class = "glyphicon glyphicon-arrow-left"></span></a>
-                        <a title = "Next" href = '{{ url_for("dashes.elementSummary", elementTemplateId = elementTemplate.next().id()) }}'>
+                        <a title = "Next" href = '{{ url_for("dashes.elementsSummary", elementTemplateId = elementTemplate.next().id()) }}'>
                             <span class = "glyphicon glyphicon-arrow-right"></span></a>
                         <a href = '{{ url_for("elements.selectElement", selectedClass = "ElementTemplate",
                             selectedId = elementTemplate.id()) }}'>{{ elementTemplate.Name }}</a>
                     </li>
-                    <li class = "active">Element Summary</li>
+                    <li class = "active">Elements Summary</li>
                 {% endif %}
             </ol>
         </div>
     {% endif %}
     <div class = "page-header">
-        <h1>Element Summary <small></small></h1>
+        <h1>Elements Summary <small></small></h1>
     </div>
     <div class = "embed-responsive embed-responsive-4by3">
         <iframe id = "iframe" class = "embed-responsive-item"></iframe>
@@ -78,7 +78,7 @@
                     + {{ elementTemplate.ElementTemplateId }} + elementParameters + "&collapseExpand=collapsed"
             {% endif %}
 
-            $("#iframe").attr("src", '{{ url_for("/elementSummaryDash/") }}' + "?localTimezone=" + moment.tz.guess(true) + parameters)
+            $("#iframe").attr("src", '{{ url_for("/elementsSummaryDash/") }}' + "?localTimezone=" + moment.tz.guess(true) + parameters)
             setTabIndex()
             $('ol.breadcrumb a[title="Next"]').focus()
         })
