--- a/app/templates/elements/select.html
+++ b/app/templates/elements/select.html
@@ -134,7 +134,7 @@
                                 <td><a class = "btn btn-default" title = "Select" href = '{{ url_for("elements.dashboard",
                                     elementId = child.ElementId) }}'><span class = "glyphicon glyphicon-list"></span></a></td>
                                 <td><a class = "btn btn-default" title = "Dash"
-                                    href = '{{ url_for("dashes.elementValuesGraph", elementId = child.ElementId) }}'>
+                                    href = '{{ url_for("dashes.elementsGraph", elementId = child.ElementId) }}'>
                                     <span class = "glyphicon glyphicon-stats"></span></a></td>
                             {% elif childrenClass == "ElementAttributeTemplate" %}
                                 <td></td>
