--- a/app/templates/dashes/activeEventFramesSummary/activeEventFramesSummary.html
+++ b/app/templates/dashes/activeEventFramesSummary/activeEventFramesSummary.html
@@ -56,7 +56,7 @@
         </div>
     {% endif %}
     <div class = "page-header">
-        <h1>Active Event Frame Summary <small></small></h1>
+        <h1>Active Event Frames Summary <small></small></h1>
     </div>
     <div class = "embed-responsive embed-responsive-4by3">
         <iframe id = "iframe" class = "embed-responsive-item"></iframe>
